@@ -3,7 +3,8 @@
 \encoding{UTF-8}
 \section{Version 2.4.0}{
 \itemize{
-    \item Changed MVP into DMP for all function and parameters.
     \item Seems there are bugs in newest version plotly package(4.5.2), ChAMP will still ONLY support plotly 3.6.1 version.
+    \item Corrected bug in champ.DMR() for ProbeLasso function, which was caused by changing EPICAnnotion_B1 to EPICAnnotion_B2.
+    \item Make FunctionNormalization return beta value, just like other normalization method.
     }
 }
